# TeachingTools

./: .gitignore  .gitmodules  README.md  canvas_helper_runner.py  generate_quiz.py  grade_assignments.py  grader.py  pyproject.toml  requirements.txt
TeachingTools/: __init__.py  logging.yaml
TeachingTools/grading_assistant/: ai_helper.py  assignment.py  grader.py  requirements.txt
TeachingTools/lms_interface/: canvas_interface.py  classes.py
TeachingTools/quiz_generation/: misc.py  question.py  quiz.py
TeachingTools/quiz_generation/premade_questions/: basic.py  languages.py  math_questions.py  memory_questions.py  persistence_questions.py  process.py
example_files/: all_classes.yaml  grading__exams.yaml  grading__programming_assignments.yaml  programming_assignments.yaml
question_generator/: language_questions.py
scripts/: print.scpt
src/: canvas_interface.py
