[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teachingtools"
version = "0.1.0"
description = "A collection of tools for teaching and grading"
authors = [
    {name = "Sam Ogden", email = "samuel.s.ogden@gmail.com"},
]
requires-python = ">=3.9"
dependencies = [
    "Flask==2.2.5",
    "Jinja2==3.1.3",
    "matplotlib==3.8.4",
    "Pillow",
    "pymupdf==1.24.4",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.1",
    "requests==2.32.2",
    "text2qti==0.7.1",
    "pandas",
    "pypandoc~=1.6.3",
    "pytablewriter~=1.2.0",
    "pypdf~=4.1.0",
    "openai",
    "fuzzywuzzy",
    "colorama",
    "anthropic",
    "pylatex>=1.4.2",
    "docker>=6.1.3",
    "lms_interface @ file:///Users/ssogden/repos/teaching/lms_interface"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["TeachingTools"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
